fix'd the layout
git-svn-id: file:///srv/svn/repos/futurice_reservator@97 967a2e56-9f69-44db-a86b-3acc15697453

--- a/android/Reservator/res/layout/lobby_reservation_row.xml
+++ b/android/Reservator/res/layout/lobby_reservation_row.xml
@@ -2,10 +2,7 @@
 <LinearLayout android:layout_width="fill_parent"
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:gravity="center_vertical" android:layout_height="wrap_content"
-	android:layout_gravity="center">
-	<FrameLayout android:layout_height="match_parent"
-			android:id="@+id/frameLayout3" android:layout_width="wrap_content"
-			android:layout_weight="0.4"></FrameLayout>
+	android:layout_gravity="center" android:paddingLeft="80dp" android:paddingRight="80dp">
 	<LinearLayout android:layout_width="200px" android:layout_height="wrap_content" android:orientation="vertical" android:layout_marginRight="20dp"
 		android:layout_centerVertical="true" android:id="@+id/titleLayout">
 		<TextView android:id="@+id/roomNameLabel"
@@ -17,25 +14,23 @@
 	</LinearLayout>
 	<LinearLayout android:id="@+id/bookingMode"
 		android:gravity="center_vertical"
-		android:layout_width="1px" android:layout_weight="3" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:layout_marginBottom="30dp" android:visibility="visible">
+		android:layout_height="wrap_content" android:layout_marginTop="30dp" android:layout_marginBottom="30dp" android:layout_width="fill_parent" android:visibility="visible">
 		<com.futurice.android.reservator.view.CustomTimeSpanPicker2
-			android:id="@+id/timeSpanPicker2" android:layout_height="wrap_content" android:layout_weight="1" android:layout_gravity="center" android:layout_width="match_parent"/>
-		<FrameLayout android:layout_height="match_parent" android:layout_width="wrap_content" android:layout_weight="1"></FrameLayout>
+			android:id="@+id/timeSpanPicker2" android:layout_height="wrap_content" android:layout_gravity="center" android:layout_width="wrap_content"/>
 		<AutoCompleteTextView android:id="@+id/autoCompleteTextView1" android:layout_height="wrap_content"
 			android:layout_toRightOf="@+id/timeSpanPicker1" android:lines="1"
 			android:layout_centerVertical="true"
 			android:hint="Your name" android:completionHint="Your name" android:inputType="textFilter" android:maxLines="1" android:imeOptions="actionDone" android:completionThreshold="1" android:layout_width="230dp"></AutoCompleteTextView>
-		<FrameLayout android:layout_height="match_parent" android:layout_width="wrap_content" android:layout_weight="1"></FrameLayout>
 		<Button android:layout_height="wrap_content"
 			android:layout_width="wrap_content" android:text="OK"
-			android:minWidth="40sp" android:id="@+id/reserveButton" android:layout_weight="1" android:focusable="true"></Button>
-		<FrameLayout android:layout_height="match_parent" android:layout_width="wrap_content" android:layout_weight="1"></FrameLayout>
+			android:minWidth="40sp" android:id="@+id/reserveButton" android:focusable="true"></Button>
+		<FrameLayout android:layout_width="1dp" android:layout_weight="1" android:layout_height="match_parent" />
 		<Button android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:text="X"
-			android:minWidth="40sp" android:id="@+id/cancelButton" android:layout_weight="1" android:focusable="true"></Button>
+			android:minWidth="40sp" android:id="@+id/cancelButton" android:focusable="true" android:layout_gravity="top|right"></Button>
 	</LinearLayout>
 	<LinearLayout android:id="@+id/normalMode"
-		android:layout_width="1px" android:layout_weight="3" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginBottom="10dp" android:visibility="gone">
+		android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginBottom="10dp" android:layout_width="fill_parent" android:visibility="gone" android:layout_marginRight="0dp">
 		<TextView android:layout_width="wrap_content"
 			android:layout_height="wrap_content" android:id="@+id/roomStatusLabel"
 			android:text="&lt;status&gt;" android:width="200px" android:layout_gravity="center"></TextView>
@@ -48,6 +43,4 @@
 			android:id="@+id/calendarButton" android:layout_height="wrap_content"
 			android:layout_width="wrap_content" android:focusable="true" android:layout_gravity="center"></Button>
 	</LinearLayout>
-	<FrameLayout android:layout_height="match_parent"
-			android:id="@+id/frameLayout3" android:layout_width="wrap_content" android:layout_weight="0.2"></FrameLayout>
 </LinearLayout>
