calendarview layout, switched to real data
git-svn-id: file:///srv/svn/repos/futurice_reservator@111 967a2e56-9f69-44db-a86b-3acc15697453

--- a/android/Reservator/res/layout/calendar_view.xml
+++ b/android/Reservator/res/layout/calendar_view.xml
@@ -3,7 +3,7 @@
 	android:layout_height="fill_parent" android:layout_width="fill_parent">
     <FrameLayout android:layout_alignParentTop="true" android:id="@+id/topLeftEmptyBox" android:layout_alignParentLeft="true" android:layout_alignRight="@+id/hourColumn" android:layout_height="50dp" android:layout_width="wrap_content" android:minWidth="50dp">
     </FrameLayout>
-    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_alignParentLeft="true" android:minWidth="20dp" android:layout_below="@+id/topLeftEmptyBox" android:layout_alignParentBottom="true" android:layout_height="wrap_content" android:id="@+id/hourColumn"></LinearLayout>
+    <com.futurice.android.reservator.view.CalendarDayLayout android:layout_alignParentLeft="true" android:minWidth="20dp" android:layout_below="@+id/topLeftEmptyBox" android:layout_alignParentBottom="true" android:layout_height="wrap_content" android:id="@+id/hourColumn" android:layout_width="wrap_content"></com.futurice.android.reservator.view.CalendarDayLayout>
     <HorizontalScrollView android:id="@+id/horizontalScrollView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignTop="@+id/topLeftEmptyBox" android:layout_alignParentRight="true" android:layout_alignBottom="@+id/hourColumn" android:layout_toRightOf="@+id/hourColumn">
         <RelativeLayout android:id="@+id/relativeLayout1" android:layout_width="match_parent" android:layout_height="match_parent"></RelativeLayout>
     </HorizontalScrollView>
