--- a/android/Reservator/res/values/styles.xml
+++ b/android/Reservator/res/values/styles.xml
@@ -5,12 +5,12 @@
         <item name="android:textSize">18pt</item>
     </style>
     <color name="CalendarBorderColor">#444</color>
-    <color name="CalendarMarkerColor">#d8f6d5c5</color>
+    <color name="CalendarTextColor">#000</color>
     <color name="StatusFreeColor">#529200</color>
     <color name="StatusReservedColor">#b24c4c</color>
     <color name="Transparent">#0000</color>
-    <color name="CalendarMarkerReservedColor">#FF00</color>
-    <color name="CalendarMarkerFreeColor">#F00A</color>
+    <color name="CalendarMarkerReservedColor">#d8f6d5c5</color>
+    <color name="CalendarMarkerFreeColor">#0000</color>
     <style name="Theme.Transparent" parent="android:Theme">
     	<item name="android:windowIsTranslucent">true</item>
     	<item name="android:windowBackground">@color/Transparent</item>
