--- a/android/Reservator/res/values/styles.xml
+++ b/android/Reservator/res/values/styles.xml
@@ -4,7 +4,7 @@
         <item name="android:textColor">#666</item>
         <item name="android:textSize">18pt</item>
     </style>
-    <color name="CalendarBorderColor">#444</color>
+    <color name="CalendarBorderColor">#ccc</color>
     <color name="CalendarTextColor">#000</color>
     <color name="StatusFreeColor">#529200</color>
     <color name="StatusReservedColor">#b24c4c</color>
