--- a/android/Reservator/res/layout/settings.xml
+++ b/android/Reservator/res/layout/settings.xml
@@ -5,8 +5,8 @@
 	android:background="@drawable/background" android:padding="0dip">
 	<RelativeLayout
 		android:layout_width="wrap_content" android:layout_height="wrap_content"
-		android:layout_centerInParent="true">
-		<Spinner android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/defaultRoomSpinner" android:layout_below="@+id/defaultRoomLabel"></Spinner>
-		<TextView android:text="@string/default_room" android:layout_height="wrap_content" android:id="@+id/defaultRoomLabel" android:layout_width="wrap_content" android:gravity="center_vertical" android:lines="2"></TextView>
+		android:layout_centerInParent="true" android:paddingRight="20dp" android:paddingLeft="20dp">
+		<TextView android:layout_height="wrap_content" android:gravity="center_vertical" android:lines="2" android:layout_width="fill_parent" android:id="@+id/serverAddressLabel" android:text="@string/exchange_server_address"></TextView>
+		<EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/serverAddressLabel" android:layout_alignLeft="@+id/serverAddressLabel" android:layout_alignRight="@+id/serverAddressLabel" android:id="@+id/serverAddressEdit"></EditText>
 	</RelativeLayout>
 </RelativeLayout>
