--- a/android/Reservator/res/layout/room_browse_view.xml
+++ b/android/Reservator/res/layout/room_browse_view.xml
@@ -2,16 +2,15 @@
 <RelativeLayout android:id="@+id/relativeLayout"
 	android:layout_width="fill_parent" android:layout_height="fill_parent"
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:background="@drawable/background" android:padding="1dip">
+	android:background="@drawable/background" android:padding="10dip">
 	<TextView android:layout_width="wrap_content"
 		android:layout_height="wrap_content" android:text="TextView"
-		android:id="@+id/roomNameLabel" android:layout_marginTop="20dp"
-		android:layout_marginLeft="80dp" android:paddingLeft="40dp"></TextView>
+		android:id="@+id/roomNameLabel" android:layout_marginLeft="80dp" android:paddingLeft="40dp" android:layout_marginTop="10dp"></TextView>
+	<Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentRight="true" android:text="@string/seeAllRooms" android:id="@+id/seeAllRoomsButton" android:layout_alignTop="@+id/roomNameLabel"></Button>
 	<com.futurice.android.reservator.view.WeekView
 		android:layout_width="fill_parent" android:id="@+id/weekView1"
-		android:layout_height="fill_parent" android:layout_below="@+id/roomNameLabel"
-		android:layout_alignLeft="@+id/roomNameLabel"
-		android:layout_marginLeft="0dp" android:layout_marginRight="0dp" android:layout_marginBottom="0dp" android:layout_marginTop="50dp">
+		android:layout_height="fill_parent" android:layout_alignLeft="@+id/roomNameLabel"
+		android:layout_marginLeft="0dp" android:layout_marginRight="0dp" android:layout_marginBottom="0dp" android:layout_marginTop="0dp" android:layout_below="@+id/seeAllRoomsButton">
 		<FrameLayout
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
