few new graphics
git-svn-id: file:///srv/svn/repos/futurice_reservator@139 967a2e56-9f69-44db-a86b-3acc15697453

--- a/android/Reservator/res/values/styles.xml
+++ b/android/Reservator/res/values/styles.xml
@@ -28,4 +28,6 @@
         <item name="android:textSize">22sp</item>
     </style>
     <color name="FutuLightGreen">#cbdeb2</color>
+    <color name="ReserveBackground">#d2e5bd</color>
+    <color name="ReserveLine">#a4cb80</color>
 </resources>
