--- a/android/Reservator/res/layout/lobby_reservation_row.xml
+++ b/android/Reservator/res/layout/lobby_reservation_row.xml
@@ -19,11 +19,11 @@
 			android:id="@+id/timeSpanPicker2" android:layout_height="wrap_content" android:layout_gravity="center" android:layout_width="wrap_content"/>
 		<AutoCompleteTextView android:id="@+id/autoCompleteTextView1" android:layout_height="wrap_content"
 			android:lines="1"
-			android:hint="Your name" android:completionHint="Your name" android:inputType="textFilter" android:maxLines="1" android:imeOptions="actionDone" android:layout_width="230dp" android:layout_gravity="center" android:completionThreshold="2"></AutoCompleteTextView>
+			android:hint="Your name" android:completionHint="Your name" android:inputType="textFilter" android:maxLines="1" android:imeOptions="actionDone" android:layout_width="230dp" android:layout_gravity="center" android:completionThreshold="2" android:layout_marginRight="10dp" android:layout_marginLeft="10dp"></AutoCompleteTextView>
 		<Button android:layout_height="wrap_content"
 			android:layout_width="wrap_content" android:minWidth="40sp" android:id="@+id/reserveButton" android:focusable="true" android:text="Reserve"></Button>
 		<FrameLayout android:layout_width="1dp" android:layout_weight="1" android:layout_height="match_parent" />
-		<ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/cancelButton" android:layout_gravity="top" android:background="@drawable/icon"></ImageButton>
+		<ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/cancelButton" android:layout_gravity="top" android:background="@drawable/close_button_states"></ImageButton>
 	</LinearLayout>
 	<LinearLayout android:id="@+id/normalMode"
 		android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginBottom="10dp" android:layout_width="fill_parent" android:layout_marginRight="0dp" android:visibility="visible">
@@ -35,7 +35,7 @@
 			android:layout_height="wrap_content" android:text="@string/book_now"
 			android:id="@+id/bookNowButton" android:focusable="true" android:layout_gravity="center"></Button>
 		<FrameLayout android:layout_height="match_parent" android:layout_width="wrap_content" android:layout_weight="1"></FrameLayout>
-		<Button android:background="@drawable/kalenterinappi"
+		<Button android:background="@drawable/calendar_small"
 			android:id="@+id/calendarButton" android:layout_height="wrap_content"
 			android:layout_width="wrap_content" android:focusable="true" android:layout_gravity="center"></Button>
 	</LinearLayout>
