--- a/android/Reservator/res/layout/lobby_reservation_row.xml
+++ b/android/Reservator/res/layout/lobby_reservation_row.xml
@@ -4,7 +4,7 @@
 	android:gravity="center_vertical" android:layout_height="wrap_content"
 	android:layout_gravity="center" android:paddingLeft="80dp" android:paddingRight="80dp">
 	<LinearLayout android:layout_height="wrap_content" android:orientation="vertical" android:layout_marginRight="20dp"
-		android:layout_centerVertical="true" android:id="@+id/titleLayout" android:layout_width="150dp">
+		android:id="@+id/titleLayout" android:layout_width="150dp" android:layout_gravity="center">
 		<TextView android:id="@+id/roomNameLabel"
 			android:layout_width="wrap_content" android:layout_height="wrap_content"
 			android:text="Room name XXX" android:textStyle="bold" android:textColor="@color/TextColor"></TextView>
@@ -21,7 +21,7 @@
 			android:lines="1"
 			android:hint="Your name" android:completionHint="Your name" android:inputType="textFilter" android:maxLines="1" android:imeOptions="actionDone" android:layout_width="230dp" android:layout_gravity="center" android:completionThreshold="2" android:layout_marginRight="10dp" android:layout_marginLeft="10dp"></AutoCompleteTextView>
 		<Button android:layout_height="wrap_content" 
-			android:layout_width="wrap_content" android:id="@+id/reserveButton" android:focusable="true" android:text="Reserve" android:background="@drawable/button_background"></Button>
+			android:layout_width="wrap_content" android:id="@+id/reserveButton" android:focusable="true" android:text="Reserve" android:background="@drawable/button_background" android:layout_gravity="center"></Button>
 		<FrameLayout android:layout_width="1dp" android:layout_weight="1" android:layout_height="match_parent" />
 		<ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/cancelButton" android:layout_gravity="top" android:background="@drawable/close_button_states"></ImageButton>
 	</LinearLayout>
