-updated settingsactivity layout and added remove user data button
git-svn-id: file:///srv/svn/repos/futurice_reservator@150 967a2e56-9f69-44db-a86b-3acc15697453

--- a/android/Reservator/res/layout/settings_activity.xml
+++ b/android/Reservator/res/layout/settings_activity.xml
@@ -8,5 +8,6 @@
 		android:layout_centerInParent="true" android:paddingRight="20dp" android:paddingLeft="20dp">
 		<TextView android:layout_height="wrap_content" android:gravity="center_vertical" android:lines="2" android:layout_width="fill_parent" android:id="@+id/serverAddressLabel" android:text="@string/exchange_server_address"></TextView>
 		<EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_below="@+id/serverAddressLabel" android:layout_alignLeft="@+id/serverAddressLabel" android:layout_alignRight="@+id/serverAddressLabel" android:id="@+id/serverAddressEdit" android:maxLines="1"></EditText>
+		<Button android:layout_below="@+id/serverAddressEdit" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/removeUserDataButton" android:layout_alignLeft="@+id/serverAddressEdit" android:text="@string/removeUserData"></Button>
 	</RelativeLayout>
 </RelativeLayout>
