fixed timespan issue in CalendarVisualizer Tweaked animatinons in reservationrowview
git-svn-id: file:///srv/svn/repos/futurice_reservator@178 967a2e56-9f69-44db-a86b-3acc15697453

--- a/android/Reservator/res/layout/lobby_reservation_row.xml
+++ b/android/Reservator/res/layout/lobby_reservation_row.xml
@@ -29,9 +29,9 @@
 		</LinearLayout>
 	</FrameLayout>
 	<ViewSwitcher android:id="@+id/modeSwitcher"
-		android:layout_width="wrap_content" android:layout_height="wrap_content"
+		android:layout_height="wrap_content"
 		android:inAnimation="@animator/fadein" android:outAnimation="@animator/fadeout"
-		android:layout_gravity="center_vertical">
+		android:layout_gravity="center_vertical" android:layout_width="fill_parent">
 		<LinearLayout android:layout_width="fill_parent"
 			android:layout_gravity="center_vertical" android:layout_marginRight="0dp"
 			android:visibility="visible" android:layout_marginBottom="10dp"
@@ -55,7 +55,7 @@
 		</LinearLayout>
 		<LinearLayout android:id="@+id/bookingMode"
 			android:gravity="center_vertical" android:layout_height="wrap_content"
-			android:layout_width="fill_parent" android:visibility="visible">
+			android:layout_width="fill_parent" android:layout_gravity="center_vertical">
 			<com.futurice.android.reservator.view.CustomTimeSpanPicker2
 				android:id="@+id/timeSpanPicker2" android:layout_height="wrap_content"
 				android:layout_gravity="center" android:layout_width="wrap_content"
