--- a/android/Reservator/res/values/styles.xml
+++ b/android/Reservator/res/values/styles.xml
@@ -35,4 +35,5 @@
     <color name="buttonTextActiveColor">#333</color>
     <color name="buttonTextDisabledColor">#999</color>
     <color name="TextInfoColor">#666</color>
+    <color name="CalendarWeekTextColor">#999</color>
 </resources>
