--- a/android/Reservator/res/layout/lobby_reservation_row.xml
+++ b/android/Reservator/res/layout/lobby_reservation_row.xml
@@ -3,10 +3,9 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:gravity="center_vertical" android:layout_height="wrap_content"
 	android:layout_gravity="center">
-	<FrameLayout android:layout_height="match_parent"
-		android:layout_marginLeft="120dp" android:layout_marginRight="20dp"
+	<FrameLayout android:layout_marginLeft="120dp" android:layout_marginRight="20dp"
 		android:id="@+id/outerTitleLayout" android:layout_gravity="center"
-		android:layout_width="170dp">
+		android:layout_width="170dp" android:layout_height="wrap_content">
 		<LinearLayout android:layout_height="wrap_content"
 			android:orientation="horizontal" android:id="@+id/middleTitleLayout"
 			android:layout_width="wrap_content" android:layout_gravity="center_vertical">
