--- a/android/Reservator/res/values/styles.xml
+++ b/android/Reservator/res/values/styles.xml
@@ -27,6 +27,10 @@
         <item name="android:textColor">@color/TimeSpanTextColor</item>
         <item name="android:textSize">22sp</item>
     </style>
+    <style name="DigitalClockStyle">
+        <item name="android:textColor">@color/TimeSpanTextColor</item>
+        <item name="android:textSize">64sp</item>
+    </style>
     <color name="FutuLightGreen">#cbdeb2</color>
     <color name="ReserveBackground">#6698c655</color>
     <color name="ReserveLine">#a4cb80</color>
