--- a/futureservator/reservator/static/css/reservator.css
+++ b/futureservator/reservator/static/css/reservator.css
@@ -1,15 +1,16 @@
 .reservation {
   margin-bottom: 10px;
-  padding: 2px 10px;
   border: 1px solid #3a8203;
   border-radius: 2px;
   -moz-border-radius: 2px;
   -khtml-border-radius: 2px;
   -webkit-border-radius: 2px;
-  background: white; }
+  background: #f4ffeb; }
+  .reservation .inner {
+    padding: 2px 10px; }
 
 .cancelable {
-  background: #f4ffeb; }
+  background: #d7fdba; }
 
 span.debug {
   display: block;
@@ -20,3 +21,12 @@ span.start:after {
 
 span.subject {
   font-weight: bold; }
+
+.week-calendar {
+  position: relative;
+  width: 100%;
+  height: 600px;
+  overflow: hidden; }
+  .week-calendar .reservation {
+    position: absolute;
+    overflow: hidden; }
