--- a/futureservator/reservator/static/scss/reservator.scss
+++ b/futureservator/reservator/static/scss/reservator.scss
@@ -9,14 +9,17 @@ $futugreen: #3A8203;
 
 .reservation {
 	margin-bottom: 10px;
-	padding: 2px 10px;
 	border: 1px solid $futugreen;
 	@include border-radius;
-	background: lighten($futugreen, 90%);
+	background: lighten($futugreen, 70%);
+
+	.inner {
+		padding: 2px 10px;
+	}
 }
 
 .cancelable {
-	background: lighten($futugreen, 70%);
+	background: lighten($futugreen, 60%);
 }
 
 span.debug {
@@ -28,4 +31,16 @@ span.start:after {
 }
 span.subject {
 	font-weight: bold;
+}
+
+.week-calendar {
+	position: relative;
+	width: 100%;
+	height: 600px;
+	overflow: hidden;
+
+	.reservation {
+		position: absolute;
+		overflow: hidden;
+	}
 }
